[project]
name = "middele-experiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "scikit-learn>=1.7.0",
    "tifffile>=2025.6.1",
    "torch>=2.7.0",
    "torchmetrics>=1.7.2",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
]
